added inventory user roles endpoint
