# service2110/src/schemas/inventory/inventory-common.schema.ts
@@ -3,7 +3,7 @@ import { z } from 'zod';
 import { inventoryProcessStatusSchema } from './enums/InventoryProcessStatusEnum.ts';
 import { dateSchema } from '../common/dateString.schema.ts';
 import { zUuidSchema } from '../common/uuid.schema.ts';
-import { inventoryReportStatusSchema } from './enums/InventoryReportStatusEnum.ts';
+import { inventoryAssignmentsSchema, inventoryReportStatusSchema, inventoryUserRolesSchema } from './enums/InventoryReportStatusEnum.ts';
 import { zIdSchema } from '../common/id.schema.ts';
 
 export const inventoryInventoryStateQuerySchema = z.object({
@@ -66,4 +66,14 @@ export const inventoryReportExportItemSchema = z.object({
 
 export const inventoryActiveStateSchema = z.object({
   status: inventoryProcessStatusSchema,
+});
+
+export const inventoryRoleAssignmentSchema = z.object({
+  role: inventoryUserRolesSchema,
+  assignments: z.array(inventoryAssignmentsSchema),
+})
+
+export const inventoryUserRolesResponseSchema = z.object({
+  login: z.string(),
+  roleAssignments: z.array(inventoryRoleAssignmentSchema).optional(),
 });
